# music_scales_and_keys

./: Pipfile  README.md  main.py  pyproject.toml  requirements.txt
music/: __init__.py  base_scale.py  key.py  main.py  music_constants.py  scale.py  scale_generator.ipynb
notebooks/: chord.mid  sandbox.ipynb  scale_generator.ipynb
src/: __init__.py  base_scale.py  key.py  main.py  modes.py  music_helper.py  scale.py  scale_generator.ipynb
src/app/: base_scale.py  key.py  midi.py  modes.py  music.py  music_constants.py  music_helper.py  scale.py
src/app/utils/: evaluation.py  utils.py
